# Retail-Sales

./: README.md  main.ipynb  parte2.ipynb  pyproject.toml
